volexc/tests/ui/parse_unexpected_token.out
Error: found 'extra' expected ';'
   ╭─[ parse_unexpected_token.vol:3:14 ]
   │
 3 │     bar: u32 extra;
   │              ──┬──  
   │                ╰──── Unexpected 'extra'
   │ 
   │ Note: Expected one of: ';'
───╯