volexc/tests/ui/parse_unexpected_token.vol
// Unexpected token after type name
struct Foo {
    bar: u32 extra;
}
